login and register service

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  get: ^4.6.6
   circular_bottom_navigation: ^2.3.0
   google_fonts: ^6.1.0
 
