--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,19 +40,15 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   get: ^4.6.6
   circular_bottom_navigation: ^2.3.0
   google_fonts: ^6.1.0
   image_picker: ^1.0.7
   shared_preferences: ^2.2.2
-
-
+  connectivity_plus: ^5.0.2
+  provider: ^6.1.2
+  khalti_flutter: ^3.0.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
